# advent

./: README.md  advent.cabal  stack.yaml
app/: Main.hs
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
src/Day1/: Solution.hs
src/Day2/: Solution.hs
src/Day3/: Solution.hs
src/Day4/: Solution.hs
