name:                advent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
data-files:          *.txt
data-dir:            data
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1, Day2, Day3, Day4, Day5,
                       Day6
  build-depends:       base >= 4.7 && < 5, split, mtl,
                       containers, bytestring, MissingH,
                       parsec
  default-language:    Haskell2010
  other-modules:       Paths_advent

executable advent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_advent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
  default-language:    Haskell2010

test-suite advent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent
